--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="icons">
             <i class="fas fa-bars" id="menu-bars"></i>
             <i class="fas fa-user" id="user-icon"></i>
-            <a href="#" class="fas fa-phone"></a>
-            <a href="#" class="fas fa-map-marker-alt"></a>
+            <i class="fas fa-suitcase"></i>
+            <i class="fas fa-location-arrow"></i>
         </div>
     </header>
 
