--- a/index.html
+++ b/index.html
@@ -270,6 +270,16 @@
 </section>
 
 
+
+    <!-- loader section starts here -->
+
+        <div class="loader-container">
+            <img src="images/loader.gif" alt="desserts">
+        </div>
+
+    <!-- loader section ends here -->
+
+
     <!-- js swiper -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
