--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
 
         <div class="box">
             <h3>socials</h3>
-            <a href="https://www.instagram.com/yourinstagramusername/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/yourfacebookusername/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://tiktok.com/@amumabirimise?lang=en" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.instagram.com/Ntshuxeko_Boyza/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/Ntshuxeko_Boyza/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://tiktok.com/@Ntshuxeko_Boyza" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a>
         </div>
 
         <div class="box">
