--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@
         <div class="box">
             <h3>socials</h3>
             <a href="https://www.instagram.com/Ntshuxeko_Boyza/" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/Ntshuxeko_Boyza/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://tiktok.com/@Ntshuxeko_Boyza" target="_blank" rel="noopener noreferrer"><i class="fab fa-tiktok"></i></a>
+            <a href="https://www.facebook.com/NtshuxekoBoyzaNb/" target="_blank" rel="noopener noreferrer"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://wa.me/270791092816?text=Hello,%20I%20am%20interested%20in%20special%20events%20and%20tours.%20Please%20provide%20more%20details." target="_blank" rel="noopener noreferrer"><i class="fab fa-whatsapp"></i></a>
         </div>
 
         <div class="box">
